Flatline the request body
