# src/shared/types/userTypes/params.ts
@@ -1,7 +1,3 @@
-export interface EligibilityRegisterBody {
-  user: EligibilityRegisterParams;
-}
-
 export interface EligibilityRegisterParams {
   username: string;
   password: string;
@@ -24,8 +20,18 @@ export interface CreateEligibleUserParams {
 }
 
 export interface KYCRegisterBody {
-  user: KYCRegisterParams;
-  bankAccount: BankAccountParams;
+  firstName: string;
+  lastName: string;
+  username: string;
+  password: string;
+  confirmedPassword: string;
+  phoneNumber: string;
+  socialSecurityNumber: string;
+  bankName: string;
+  bankNumber: string;
+  accountHolderName: string;
+  accountNumber: string;
+  expirationDate: string;
 }
 
 export interface KYCRegisterParams {
