# src/swagger.json
@@ -677,28 +677,23 @@
       "EligibilityRegisterBody": {
         "type":"object",
         "properties":{
-          "user":{
-            "type":"object",
-            "properties": {
-              "username":{
-                "type":"string",
-                "required": true,
-                "description": "Validation:required|valid_email|unique",
-                "example":"john.doe-unique@example.com"
-              },
-              "password":{
-                "required": true,
-                "description": "Validation:required|strong|confirmed",
-                "type":"string",
-                "example":"Strongpassword123!"
-              },
-              "confirmedPassword": {
-                "required": true,
-                "description": "Validation:required",
-                "type":"string",
-                "example":"Strongpassword123!"
-              }
-            }
+          "username":{
+            "type":"string",
+            "required": true,
+            "description": "Validation:required|valid_email|unique",
+            "example":"john.doe-unique@example.com"
+          },
+          "password":{
+            "required": true,
+            "description": "Validation:required|strong|confirmed",
+            "type":"string",
+            "example":"Strongpassword123!"
+          },
+          "confirmedPassword": {
+            "required": true,
+            "description": "Validation:required",
+            "type":"string",
+            "example":"Strongpassword123!"
           }
         }
       },
@@ -777,97 +772,87 @@
       "KycRegisterBody": {
         "type": "object",
         "properties": {
-          "user": {
-            "type": "object",
-            "properties": {
-              "firstName": {
-                "type": "string",
-                "required": true,
-                "minLength": 3,
-                "maxLength": 20,
-                "description": "Validation:required|length:3-20",
-                "example": "John"
-              },
-              "lastName": {
-                "type": "string",
-                "required": true,
-                "minLength": 3,
-                "maxLength": 20,
-                "description": "Validation:required|length:3-20",
-                "example": "Doe"
-              },
-              "username": {
-                "type": "string",
-                "required": true,
-                "description": "Validation:required|valid_email|unique|started_jumio_verification_process",
-                "example": "john.doe@example.com"
-              },
-              "password":{
-                "type":"string",
-                "required": true,
-                "description": "Validation:required|strong|confirmed",
-                "example":"Iamstrong111!"
-              },
-              "confirmedPassword": {
-                "type": "string",
-                "required": true,
-                "description": "Validation:required",
-                "example": "Iamstrong111!"
-              },
-              "phoneNumber": {
-                "type": "string",
-                "required": true,
-                "description": "Validation:required",
-                "example": "(555) 555-1234"
-              },
-              "socialSecurityNumber": {
-                "type": "string",
-                "required": true,
-                "pattern": "^(?!666|000|9\\d{2})\\d{3}-(?!00)\\d{2}-(?!0{4})\\d{4}$",
-                "description": "Validation:required|unique",
-                "example": "111-22-3333"
-              }
-            }
+          "firstName": {
+            "type": "string",
+            "required": true,
+            "minLength": 3,
+            "maxLength": 20,
+            "description": "Validation:required|length:3-20",
+            "example": "John"
           },
-          "bankAccount": {
-            "type": "object",
-            "properties": {
-              "bankName": {
-                "type": "string",
-                "required": true,
-                "minLength": 3,
-                "maxLength": 20,
-                "description": "Validation:required|length:3-20",
-                "example": "Example Bank"
-              },
-              "bankNumber": {
-                "type": "string",
-                "required": true,
-                "description": "Validation:required",
-                "example": "021000021"
-              },
-              "accountHolderName": {
-                "type": "string",
-                "required": true,
-                "minLength": 3,
-                "maxLength": 20,
-                "description": "Validation:required|length:3-20",
-                "example": "John Doe"
-              },
-              "accountNumber": {
-                "type": "string",
-                "required": true,
-                "description": "Validation:required",
-                "example": "13719713158835300"
-              },
-              "expirationDate": {
-                "type": "string",
-                "required": true,
-                "pattern": "^(0[1-9]|1[0-2])\\/([0-9]{2})$",
-                "description": "Validation:required|future_date",
-                "example": "01/23"
-              }
-            }
+          "lastName": {
+            "type": "string",
+            "required": true,
+            "minLength": 3,
+            "maxLength": 20,
+            "description": "Validation:required|length:3-20",
+            "example": "Doe"
+          },
+          "username": {
+            "type": "string",
+            "required": true,
+            "description": "Validation:required|valid_email|unique|started_jumio_verification_process",
+            "example": "john.doe@example.com"
+          },
+          "password":{
+            "type":"string",
+            "required": true,
+            "description": "Validation:required|strong|confirmed",
+            "example":"Iamstrong111!"
+          },
+          "confirmedPassword": {
+            "type": "string",
+            "required": true,
+            "description": "Validation:required",
+            "example": "Iamstrong111!"
+          },
+          "phoneNumber": {
+            "type": "string",
+            "required": true,
+            "description": "Validation:required",
+            "example": "(555) 555-1234"
+          },
+          "socialSecurityNumber": {
+            "type": "string",
+            "required": true,
+            "pattern": "^(?!666|000|9\\d{2})\\d{3}-(?!00)\\d{2}-(?!0{4})\\d{4}$",
+            "description": "Validation:required|unique",
+            "example": "111-22-3333"
+          },
+          "bankName": {
+            "type": "string",
+            "required": true,
+            "minLength": 3,
+            "maxLength": 20,
+            "description": "Validation:required|length:3-20",
+            "example": "Example Bank"
+          },
+          "bankNumber": {
+            "type": "string",
+            "required": true,
+            "description": "Validation:required",
+            "example": "021000021"
+          },
+          "accountHolderName": {
+            "type": "string",
+            "required": true,
+            "minLength": 3,
+            "maxLength": 20,
+            "description": "Validation:required|length:3-20",
+            "example": "John Doe"
+          },
+          "accountNumber": {
+            "type": "string",
+            "required": true,
+            "description": "Validation:required",
+            "example": "13719713158835300"
+          },
+          "expirationDate": {
+            "type": "string",
+            "required": true,
+            "pattern": "^(0[1-9]|1[0-2])\\/([0-9]{2})$",
+            "description": "Validation:required|future_date",
+            "example": "01/23"
           }
         }
       },
